--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+        <title>Caizza Propiedades</title>
+        <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css"> -->
+        <!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
+        <!-- CSS  -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy' rel='stylesheet' type='text/css'>
+        <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<script type="text/javascript">
+    var headerItems = {
+  "meta": {
+    "limit": 20, 
+    "next": "/api/v1/property_type/?lang=es_ar&offset=20&limit=20&key=4ebddc80de28836454dc2c43dbd82fa38b510731&format=json", 
+    "offset": 0, 
+    "previous": null, 
+    "total_count": 21
+  }, 
+  "objects": [
+    {
+      "code": "LA", 
+      "id": 1, 
+      "name": "Terreno"
+    }, 
+    {
+      "code": "AP", 
+      "id": 2, 
+      "name": "Departamento"
+    }, 
+    {
+      "code": "HO", 
+      "id": 3, 
+      "name": "Casa"
+    }, 
+    {
+      "code": "WE", 
+      "id": 4, 
+      "name": "Quinta"
+    }, 
+    {
+      "code": "OF", 
+      "id": 5, 
+      "name": "Oficina"
+    }, 
+    {
+      "code": "AM", 
+      "id": 6, 
+      "name": "Amarra"
+    }, 
+    {
+      "code": "LO", 
+      "id": 7, 
+      "name": "Local"
+    }, 
+    {
+      "code": "CO", 
+      "id": 8, 
+      "name": "Edificio Comercial"
+    }, 
+    {
+      "code": "CS", 
+      "id": 9, 
+      "name": "Campo"
+    }, 
+    {
+      "code": "GA", 
+      "id": 10, 
+      "name": "Cochera"
+    }, 
+    {
+      "code": "HL", 
+      "id": 11, 
+      "name": "Hotel"
+    }, 
+    {
+      "code": "IS", 
+      "id": 12, 
+      "name": "Nave Industrial"
+    }, 
+    {
+      "code": "PH", 
+      "id": 13, 
+      "name": "PH"
+    }, 
+    {
+      "code": "ST", 
+      "id": 14, 
+      "name": "Depósito"
+    }, 
+    {
+      "code": "FC", 
+      "id": 15, 
+      "name": "Fondo de Comercio"
+    }, 
+    {
+      "code": "SR", 
+      "id": 16, 
+      "name": "Baulera"
+    }, 
+    {
+      "code": "WI", 
+      "id": 17, 
+      "name": "Bodegas"
+    }, 
+    {
+      "code": "FA", 
+      "id": 18, 
+      "name": "Fincas"
+    }, 
+    {
+      "code": "CH", 
+      "id": 19, 
+      "name": "Chacra"
+    }, 
+    {
+      "code": "CN", 
+      "id": 20, 
+      "name": "Cama Nautica"
+    }
+  ]
+};
+    var foreignItems = [];
+    foreignItems.push({name: 'Miami', id: 6});
+    foreignItems.push({name: 'Uruguay', id: 2});
+    foreignItems.push({name: 'Brasil', id: 3});
+    foreignItems.push({name: 'Chile', id: 9});
+</script>
+    </head>
+    <body>
+        <div class="app-container"></div>
+    </body>
+    <!--  Scripts-->
+    <script src="/bundle.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
+</html>
