--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div>
       <button id="play-button"
         class="mx-auto text-lg border border-black rounded-full px-4 py-2 active:bg-black active:text-white"><i
-          class="fa-solid fa-play mr-2"></i>Play</button>
+          class="fa-solid fa-play mr-2 select-none"></i>Play</button>
       <button id="pause-button"
         class="mx-auto text-lg border border-black rounded-full px-4 py-2 active:bg-black active:text-white hidden"><i
-          class="fa-solid fa-pause mr-2"></i>Pause</button>
+          class="fa-solid fa-pause mr-2 select-none"></i>Pause</button>
     </div>
     <audio id="audio" src="song.mp3"></audio>
   </section>
@@ -66,7 +66,7 @@
     </div>
   </section>
   <section id="carrusel" class="mb-10">
-    <p class="max-w-xxs text-center font-tangerine mx-auto mt-10 text-4xl">
+    <p class="max-w-xxs text-center font-tangerine mx-auto mt-10 text-5xl">
       Hay momentos
       inolvidables que
       se atesoran en el
@@ -174,7 +174,7 @@
 
   </section>
   <section id="closing">
-    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-4xl mb-10">
+    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl mb-10">
       Un millón de recuerdos<br>
       me trajeron hasta aquí…<br>
       y uno más se hará<br>
