--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
   </section>
   <section id="carrusel" class="mb-10">
-    <p class="max-w-xxs text-center font-tangerine mx-auto mt-10 text-5xl">
+    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl">
       Hay momentos
       inolvidables que
       se atesoran en el
@@ -106,7 +106,7 @@
     <!-- <h1><i class="fa-solid fa-cake"></i></h1> -->
     <h1><i class="fa-solid fa-map-location-dot"></i></h1>
     <p class="text-center mx-auto mt-10 -mb-6">Celebramos en:</p>
-    <h1 class="max-w-xxs">Espacio 1875 Eventos</h1>
+    <h1 class="max-w-xs">Espacio 1875 Eventos</h1>
     <div class="mt-6">
       <a href="https://maps.app.goo.gl/GK5MUzyJLVqd2Yzu8" target="_blank" class="button"><i
           class="fa-solid fa-location-dot mr-2"></i>Ver mapa</a>
@@ -147,7 +147,7 @@
   </section>
   <section id="songs" class="flex items-center flex-col with-separator">
     <h1 class="mt-12"><i class="fa-solid fa-music"></i></h1>
-    <h1 class="max-w-xxs">
+    <h1 class="max-w-xs">
       ¿Qué canción no
       puede faltar en
       mi gran fiesta?</h1>
