change black to grey

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </p>
     <div>
       <button id="play-button"
-        class="mx-auto text-lg border border-black rounded-full px-4 py-2 active:bg-black active:text-white"><i
+        class="mx-auto text-lg border border-gray-900 rounded-full px-4 py-2 active:bg-gray-900 active:text-white"><i
           class="fa-solid fa-play mr-2 select-none"></i>Play</button>
       <button id="pause-button"
-        class="mx-auto text-lg border border-black rounded-full px-4 py-2 active:bg-black active:text-white hidden"><i
+        class="mx-auto text-lg border border-gray-900 rounded-full px-4 py-2 active:bg-gray-900 active:text-white hidden"><i
           class="fa-solid fa-pause mr-2 select-none"></i>Pause</button>
     </div>
     <audio id="audio" src="song.mp3" loop></audio>
@@ -170,7 +170,7 @@
       <button id="share-button" class="button"><i class="fa-brands fa-instagram mr-2"></i>Compartir</button>
     </div>
     <div id="share-message" class="mt-4 transition-all h-0 overflow-hidden duration-1000 ease-in-out box-border">
-      <p class="border border-black rounded-md px-2 py-1 opacity-80 flex items-center">
+      <p class="border border-gray-900 rounded-md px-2 py-1 opacity-80 flex items-center">
         <i class="fa-solid fa-circle-info mr-2"></i>Estará disponible el día del evento
       </p>
     </div>
