--- a/index.html
+++ b/index.html
@@ -66,15 +66,8 @@
     </div>
   </section>
   <section id="carrusel" class="mb-10">
-    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl">
-      Hay momentos
-      inolvidables que
-      se atesoran en el
-      corazón para siempre.
-      Por esa razón
-      quiero que compartas
-      conmigo esta noche
-      tan especial.
+    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl font-bold">
+      Estoy escribiendo mí propia historia. No conozco las respuestas pero camino hacia donde mis pasos me llevan.
     </p>
   </section>
   <section class="splide" aria-label="Fotos de Ana">
@@ -177,12 +170,9 @@
 
   </section>
   <section id="closing">
-    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl mb-10">
-      Un millón de recuerdos<br>
-      me trajeron hasta aquí…<br>
-      y uno más se hará<br>
-      eterno si estas conmigo en<br>
-      esta noche tan especial.<br>
+    <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl mb-10 font-bold">
+      "Mi vida es como un cuento de hadas, llena de alegrías y sorpresas inesperadas, y ahora me presento como
+      una princesa para invitarte a mis 15 primaveras."<br>
       ¡¡Te espero!!
     </p>
   </section>
