--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
   <section id="closing">
     <p class="max-w-xs text-center font-tangerine mx-auto mt-10 text-5xl mb-10 font-bold">
       "Mi vida es como un cuento de hadas, llena de alegrías y sorpresas inesperadas, y ahora me presento como
-      una princesa para invitarte a mis 15 primaveras."<br>
+      una princesa para invitarte a<br>
+      Mis 15 primaveras."<br>
       ¡¡Te espero!!
     </p>
   </section>
