--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h1 class="max-w-xxs">Confirmá tu asistencia</h1>
     <!-- <p class="text-center mx-auto mt-4 max-w-xxs px-3">presionando el botón de wsp</p> -->
     <div class="mt-6">
-      <a href="https://wa.me/541159511967?text=Hola%2C%20confirmo%20mi%20asistencia%20al%20evento.%20NOMBRE%20APELLIDO"
+      <a href="https://wa.me/541159511967?text=Hola%2C%20confirmo%20mi%20asistencia%20al%20evento.%20NOMBRE%20APELLIDO:%20"
         target="_blank" class="button"><i class="fa-brands fa-whatsapp mr-2"></i>Confirmar</a>
     </div>
 
@@ -134,8 +134,7 @@
     <p class="text-center mx-auto mt-4 max-w-xxs px-3">Dress Code:</p>
     <h1 class="max-w-xxs">
       Elegante</h1>
-    <p class="text-center mx-auto mt-4 max-w-xxs px-3">Los colores Blanco
-      y Azul son exclusivos</p>
+    <p class="text-center mx-auto mt-4 max-w-xxs px-3">En lo posible evitar el color blanco y azul.</p>
 
   </section>
   <section id="songs" class="flex items-center flex-col with-separator">
